--- a/.github/workflows/testflight-status.yaml
+++ b/.github/workflows/testflight-status.yaml
@@ -9,16 +9,21 @@ jobs:
   TestFlight:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    -
+      uses: actions/checkout@v3
+    -
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.10' 
+        python-version: '3.10'
         cache: pip
-    - run: pip install -r scripts/requirements.txt
-    - run: python scripts/update-testflight-status.py
-    - uses: EndBug/add-and-commit@v9
+    -
+      run: pip install -r scripts/requirements.txt
+    -
+      id: testflight
+      run: python scripts/update-testflight-status.py >> "$GITHUB_OUTPUT"
+    -
+      uses: EndBug/add-and-commit@v9
       with:
         add: 'README.md'
         default_author: github_actions
-        message: Update TestFlight status
-      
+        message: "TestFlight: ${{ steps.testflight.outputs.status }}"
